# backend/openApi/reference/mapAdmin.v1.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 servers:
   - description: mapadmin
-    url: 'http://localhost:3000/api'
+    url: 'http://localhost:3000'
 info:
   description: |-
     Все запросы кроме getAuthData, возвращают стандартный ответ вида
@@ -35,7 +35,7 @@ tags:
   - name: user
     description: Интерфейс пользователя
 paths:
-  /login:
+  /api/login:
     post:
       tags:
         - Авторизация
@@ -81,7 +81,8 @@ paths:
                 type: string
                 example: Bad Request
       description: Вход в аккаунт
-  /logout:
+    parameters: []
+  /api/logout:
     post:
       tags:
         - Авторизация
@@ -113,7 +114,8 @@ paths:
                   value:
                     isError: true
                     response: Unauthorized
-  /getAuthData:
+    parameters: []
+  /api/getAuthData:
     get:
       tags:
         - Авторизация
@@ -131,10 +133,15 @@ paths:
                 properties:
                   login:
                     type: string
+                    format: email
                   isAuth:
                     type: boolean
                   permission:
                     type: string
+                    enum:
+                      - user
+                      - moder
+                      - admin
                 required:
                   - login
                   - isAuth
@@ -150,7 +157,8 @@ paths:
                     login: null
                     isAuth: false
                     permission: null
-  /admin/addUser:
+    parameters: []
+  /api/admin/addUser:
     post:
       tags:
         - admin
@@ -216,7 +224,8 @@ paths:
                   value:
                     isError: true
                     response: 'region_id: this region_id not found'
-  /admin/editUser:
+    parameters: []
+  /api/admin/editUser:
     post:
       tags:
         - admin
@@ -277,7 +286,8 @@ paths:
                   value:
                     isError: true
                     response: fail
-  /admin/getUsers:
+    parameters: []
+  /api/admin/getUsers:
     get:
       tags:
         - admin
@@ -304,7 +314,8 @@ paths:
                   - isError
                   - response
               examples: {}
-  /admin/getPermission:
+    parameters: []
+  /api/admin/getPermission:
     get:
       tags:
         - admin
@@ -323,7 +334,7 @@ paths:
                   isError:
                     type: boolean
                   response:
-                    $ref: ../models/getPermissions.v1.json
+                    $ref: ../models/res/getPermissions.json
                 required:
                   - isError
                   - response
@@ -338,7 +349,8 @@ paths:
                         permission: moder
                       - id: 3
                         permission: user
-  /moder/getPoints:
+    parameters: []
+  /api/moder/getPoints:
     get:
       tags:
         - moder
@@ -374,7 +386,8 @@ paths:
                         house: 524А
                         street: Пионерская улица
                         moder_status: moderated
-  /admin/loginAs:
+    parameters: []
+  /api/admin/loginAs:
     post:
       summary: Зайти под другим пользователем
       tags:
@@ -426,7 +439,8 @@ paths:
             examples: {}
         description: Отправлем id пользователя под которого мы хотим зайти
       description: 'Заходим под другим пользователем, система будет идентифицировать как другого пользователя до того как не будет выполнен запрос returnToAdmin'
-  /admin/returnToAdmin:
+    parameters: []
+  /api/admin/returnToAdmin:
     post:
       summary: Вернуться под администратора
       tags:
@@ -458,7 +472,8 @@ paths:
                     response: fail
       operationId: get-admin-returnToAdmin
       description: 'Работает в связке с loginAs, возвращает права администратора'
-  /user/addPoint:
+    parameters: []
+  /api/user/addPoint:
     post:
       summary: Добавление точки в базу данных
       operationId: post-user-addPoint
@@ -551,7 +566,8 @@ paths:
             schema:
               $ref: ../models/req/addPoint.json
       description: 'Добавляет точку в базу данных, статус moder_status выставляется в moderated, для дальнейшего одобрения модератором. Пока статус не выставится в accept точки не будет отображаться на карте. При добавлении точки с похожими координаторами (точка не дальше 200 метров от имеющейся), будет возвращена ошибка. Для того чтоб все равно добавить точку нужно выставить поле force в запросе в true. Все точки подходящие под критерий в базе будут помечены как возможные дубликаты и присвоены к одной группе. В дальнейшем если точка будет близкой хотя бы к одной из группы, как дубликаты будут выданы все точки группы.'
-  /user/getPoints:
+    parameters: []
+  /api/user/getPoints:
     get:
       summary: Получения точек пользователем
       tags:
@@ -608,7 +624,8 @@ paths:
                         moder_status: refuse
       operationId: get-user-getPoints
       description: 'Получения списка точек принадлежащих пользователю, в случае отсутствия вернет пустой массив'
-  /user/delPoint:
+    parameters: []
+  /api/user/delPoint:
     post:
       summary: Удаление точки
       tags:
@@ -646,7 +663,8 @@ paths:
             schema:
               $ref: ../models/req/delPoint.json
         description: Отправляем id точки
-  '/moder/editPoint/{id}':
+    parameters: []
+  '/api/moder/editPoint/{id}':
     post:
       summary: Редактирование точки модератором
       tags:
@@ -688,7 +706,7 @@ paths:
         content:
           application/x-www-form-urlencoded:
             schema:
-              $ref: ../models/editPointModerRequest.v1.json
+              $ref: ../models/req/editPointModer.json
         description: Запрос
     parameters:
       - schema:
@@ -696,7 +714,7 @@ paths:
         name: id
         in: path
         required: true
-  /moder/setPointRefuse:
+  /api/moder/setPointRefuse:
     post:
       summary: Отклоняет точку
       tags:
@@ -748,7 +766,8 @@ paths:
                   description: комментарий к отказу
               required:
                 - id
-  /moder/setPointAccept:
+    parameters: []
+  /api/moder/setPointAccept:
     post:
       summary: Подтверждает точку
       tags:
@@ -798,7 +817,8 @@ paths:
               required:
                 - id
         description: ''
-  /user/editPoint:
+    parameters: []
+  /api/user/editPoint:
     post:
       summary: Редактирование точки
       operationId: post-user-editPoint
@@ -815,8 +835,8 @@ paths:
                   response:
                     oneOf:
                       - type: string
-                      - $ref: ../models/getPointsUser.v1.json
-                      - $ref: ../models/duplicate.v1.json
+                      - $ref: ../models/res/getPointsUser.json
+                      - $ref: ../models/res/duplicate.json
                 required:
                   - isError
                   - response
@@ -923,7 +943,8 @@ paths:
       description: |-
         Редактирует точку в базе данных, Стаус меняется на moderated в случаях: меняются любые поля кроме isActive, description;
         меняется discription при статусе refuse. При добавлении точки с похожими координаторами (точка не дальше 200 метров от имеющейся), будет возвращена ошибка. Для того чтоб все равно добавить точку нужно выставить поле force в запросе в true. Все точки подходящие под критерий в базе будут помечены как возможные дубликаты и присвоены к одной группе. В дальнейшем если точка будет близкой хотя бы к одной из группы, как дубликаты будут выданы все точки группы.
-  /admin/editRegion:
+    parameters: []
+  /api/admin/editRegion:
     post:
       summary: Редактирование региона
       tags:
@@ -955,7 +976,8 @@ paths:
               $ref: ../models/req/editRegion.json
             examples: {}
         description: Принимает id и новое имя региона
-  /admin/getRegions:
+    parameters: []
+  /api/admin/getRegions:
     get:
       summary: Получение списка всех регионов
       tags:
@@ -983,7 +1005,7 @@ paths:
       operationId: get-admin-getRegions
       description: Получение списка всех регионов
     parameters: []
-  /admin/addRegion:
+  /api/admin/addRegion:
     post:
       summary: Добавление нового региона
       tags:
@@ -1014,3 +1036,4 @@ paths:
               $ref: ../models/req/addRegion.json
         description: Принимает название региона
       description: Добавление нового региона
+    parameters: []
